- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    4.8.0
- 
    None
- 
    Embedded Linux
- 
        0850b5d76a242abe5beef05e2566957b695099a8
When a qsf file is created then it is still possible for it to not be written to for some reason. Therefore in cases like this the file should be removed because later on it will try to memory map the file but as it exists but is empty this will cause problems. By removing the file then it will not try to load it later on.
| For Gerrit Dashboard: QTBUG-24122 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 18996,1 | Cleanup after the qsf cache file if it fails to be written to | master | qt/qtbase | Status: MERGED | +2 | 0 |